// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiInlineEditText isReadOnly 1`] = `
<div
  class="euiInlineEdit euiInlineEditText testClass1 testClass2 emotion-euiInlineEditText-m-m-euiTestCss"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-disabled-flush-both-isDisabled-euiInlineEditReadMode-isReadOnly"
    data-test-subj="euiInlineReadModeButton"
    disabled=""
    role="paragraph"
    title="Hello World!"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        <div
          class="euiText eui-textTruncate emotion-euiText-m"
        >
          Hello World!
        </div>
      </span>
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  />
</div>
`;

exports[`EuiInlineEditText renders 1`] = `
<div
  class="euiInlineEdit euiInlineEditText testClass1 testClass2 emotion-euiInlineEditText-m-m-euiTestCss"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-flush-both-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    title="Hello World!"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        <div
          class="euiText eui-textTruncate emotion-euiText-m"
        >
          Hello World!
        </div>
      </span>
      <span
        color="inherit"
        data-euiicon-type="pencil"
      />
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditText text sizes renders m 1`] = `
<div
  class="euiInlineEdit euiInlineEditText testClass1 testClass2 emotion-euiInlineEditText-m-m-euiTestCss"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-flush-both-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    title="Hello World!"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        <div
          class="euiText eui-textTruncate emotion-euiText-m"
        >
          Hello World!
        </div>
      </span>
      <span
        color="inherit"
        data-euiicon-type="pencil"
      />
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditText text sizes renders s 1`] = `
<div
  class="euiInlineEdit euiInlineEditText testClass1 testClass2 emotion-euiInlineEditText-s-s-euiTestCss"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-flush-both-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    title="Hello World!"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        <div
          class="euiText eui-textTruncate emotion-euiText-s"
        >
          Hello World!
        </div>
      </span>
      <span
        color="inherit"
        data-euiicon-type="pencil"
      />
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditText text sizes renders xs 1`] = `
<div
  class="euiInlineEdit euiInlineEditText testClass1 testClass2 emotion-euiInlineEditText-xs-xs-euiTestCss"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-flush-both-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    title="Hello World!"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        <div
          class="euiText eui-textTruncate emotion-euiText-xs"
        >
          Hello World!
        </div>
      </span>
      <span
        color="inherit"
        data-euiicon-type="pencil"
      />
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;
